// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleSearchComponent should have a proper style generator 1`] = `
Object {
  "inHeader": Object {
    "& input[type=\\"search\\"]::-webkit-search-cancel-button": Object {
      "display": "none",
    },
    "backgroundColor": "test2",
  },
  "mobileBackArrow": Object {
    "fill": "test1",
    "height": 50,
    "opacity": 0.5,
    "width": 50,
  },
  "mobileBackArrowButton": Object {
    "height": 70,
    "width": 70,
  },
  "mobileHeader": Object {
    "backgroundColor": "test2",
    "height": 70,
    "left": 0,
    "position": "absolute",
    "top": 0,
    "width": "100%",
    "zIndex": 100,
  },
  "mobileSearchInput": Object {
    "& input": Object {
      "fontSize": 32,
      "fontWeight": "test3",
      "lineHeight": 1.2,
      "marginTop": 10,
      "overflow": "hidden",
      "textOverflow": "ellipsis",
    },
    "height": 70,
    "width": "99%",
  },
  "searchIconMobile": Object {
    "fill": "test2",
  },
  "searchIconPrefix": Object {
    "fill": "test1",
    "opacity": 0.66,
  },
}
`;

exports[`SimpleSearchComponent should render default view 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render mobile view 1`] = `
<Hidden
  smUp={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Button))
      onClick={[Function]}
    >
      <ArrowBackIcon />
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Grid))>
</Hidden>
`;

exports[`SimpleSearchComponent should render show prefix icon in the search box 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should render with a class "header" for use in AppBar 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        className={Object {}}
        container={true}
        direction="row"
        spacing={1}
        wrap="nowrap"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={true}
        >
          <TextField
            InputProps={
              Object {
                "disableUnderline": true,
              }
            }
            autoComplete="search"
            errorText={null}
            fullWidth={true}
            label=""
            onChange={[Function]}
            onKeyPress={[Function]}
            placeholder="Search eSpace"
            textFieldId="simple-search"
            type="search"
            value=""
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      smUp={true}
    >
      <WithStyles(ForwardRef(Tooltip))
        TransitionComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "children": [Function],
              "in": [Function],
              "onEnter": [Function],
              "onExit": [Function],
              "style": [Function],
              "timeout": [Function],
            },
            "render": [Function],
          }
        }
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Search eSpace"
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Click to search eSpace"
          onClick={[Function]}
        >
          <SearchIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </Hidden>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should set search value from prop 1`] = `
<Fragment>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "margin": 8,
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      container={true}
      spacing={2}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <TextField
          data-testid={true}
          errorText={null}
          fullWidth={true}
          inputProps={
            Object {
              "aria-label": "Enter your search query to search eSpace and then press Enter",
            }
          }
          label="Search eSpace"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter your search query to search all fields in eSpace"
          textFieldId="simple-search"
          type="search"
          value="i feel lucky"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to search eSpace"
          color="primary"
          data-testid="simple-search-button"
          disabled={false}
          fullWidth={true}
          id="simpleSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to switch to Advanced search"
          className="advancedButton"
          data-testid="show-advanced-search"
          fullWidth={true}
          id="showAdvancedSearchButton"
          onClick={[Function]}
          variant="contained"
        >
          Advanced search
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </form>
</Fragment>
`;

exports[`SimpleSearchComponent should show prefix icon when in header 1`] = `null`;
